--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "highlight.js": "^11.3.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^3.3.0",
