--- a/src/data/config.json
+++ b/src/data/config.json
@@ -4,6 +4,10 @@
         {
             "name": "小龙虾(师兄)",
             "path": "https://blog.csdn.net/qq_39300235"
+        },
+        {
+            "name": "醒然自然醒(亲爱的室友)",
+            "path": "https://blog.csdn.net/qq_40662405?spm=1000.2115.3001.5343"
         }
     ],
     "contact": [
