--- a/src/data/config.json
+++ b/src/data/config.json
@@ -1,5 +1,5 @@
 {
-    "imagePreSrc": "./content/page/",
+    "imagePreSrc": "/content/page/",
     "friendLink": [
         {
             "name": "小龙虾(师兄-图形学)",
