--- a/public/page/project/project.json
+++ b/public/page/project/project.json
@@ -1,6 +1,22 @@
 {
     "page": [
         {
+            "title": "通用型Resize,Drag,Rotate组件开发",
+            "subTitle": "记录一下通用型Resize,Drag,Rotate组件开发中遇到的问题",
+            "createTime": "Posted by adsionli on June 19, 2022",
+            "created_at": "2022-06-19",
+            "tags": [
+                {
+                    "label": "项目"
+                }
+            ],
+            "description": "记录一下通用型Resize,Drag,Rotate组件开发中遇到的问题以及对自身问题的一些总结",
+            "routeLink": "/page/project/resize",
+            "toTop": 1,
+            "path": "/content/page/project/resize.md",
+            "recommend": true
+        },
+        {
             "title": "危险预警项目部署总结与自我反思",
             "subTitle": "记录一下危险预警项目部署过程中遇到的问题",
             "createTime": "Posted by adsionli on December 13, 2021",
